--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-plus": "^2.4.2",
+    "element-ui": "^2.15.14",
     "vue": "^3.2.13"
   },
   "devDependencies": {
